{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 34,
  "lineage": "5c14b2e6-0652-3af7-32cf-3c2b8bd667f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013c36e94a0780e53",
            "arn": "arn:aws:ec2:us-east-1:940734073892:elastic-ip/eipalloc-013c36e94a0780e53",
            "domain": "vpc",
            "id": "eipalloc-013c36e94a0780e53",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-207-12-8.compute-1.amazonaws.com",
            "public_ip": "18.207.12.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:internet-gateway/igw-0a264fa9d086cb147",
            "id": "igw-0a264fa9d086cb147",
            "owner_id": "940734073892",
            "tags": {
              "Name": "tasnim-IGW"
            },
            "tags_all": {
              "Name": "tasnim-IGW"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "private-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/private-lb/41bf6fd4268aaac2",
            "arn_suffix": "app/private-lb/41bf6fd4268aaac2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-lb-38002934.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/private-lb/41bf6fd4268aaac2",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04dde51aa041c581e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03966d12a0fb0539e"
              },
              {
                "subnet_id": "subnet-0d7aa8d2e7fe6d01b"
              }
            ],
            "subnets": [
              "subnet-03966d12a0fb0539e",
              "subnet-0d7aa8d2e7fe6d01b"
            ],
            "tags": {
              "Environment": "private-lb"
            },
            "tags_all": {
              "Environment": "private-lb"
            },
            "vpc_id": "vpc-0ff31afd52409804d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.private-sg-lb",
            "aws_security_group.public-sg-lb",
            "aws_subnet.private-sub1",
            "aws_subnet.private-sub2",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/public-lb/a2e282c0727d04cb",
            "arn_suffix": "app/public-lb/a2e282c0727d04cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-933890083.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/public-lb/a2e282c0727d04cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e2c9c89526de7560"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b52888cfd14ef50"
              },
              {
                "subnet_id": "subnet-0b715e9159fd7b948"
              }
            ],
            "subnets": [
              "subnet-01b52888cfd14ef50",
              "subnet-0b715e9159fd7b948"
            ],
            "tags": {
              "Environment": "Public-lb"
            },
            "tags_all": {
              "Environment": "Public-lb"
            },
            "vpc_id": "vpc-0ff31afd52409804d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public-sg-lb",
            "aws_subnet.public-sub1",
            "aws_subnet.public-sub2",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "prvt-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:listener/app/private-lb/41bf6fd4268aaac2/4e482d681e10366a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/private-lb-tg/f3c78abb8d4b77e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:listener/app/private-lb/41bf6fd4268aaac2/4e482d681e10366a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/private-lb/41bf6fd4268aaac2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.private-lb",
            "aws_lb_target_group.private-lb-tg",
            "aws_security_group.private-sg-lb",
            "aws_security_group.public-sg-lb",
            "aws_subnet.private-sub1",
            "aws_subnet.private-sub2",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pub-lb-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:listener/app/public-lb/a2e282c0727d04cb/aa176f95743140cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/pub-lb-tg/92d8fb47a2959695",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:listener/app/public-lb/a2e282c0727d04cb/aa176f95743140cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:loadbalancer/app/public-lb/a2e282c0727d04cb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public-lb",
            "aws_lb_target_group.public-lb-tg",
            "aws_security_group.public-sg-lb",
            "aws_subnet.public-sub1",
            "aws_subnet.public-sub2",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/private-lb-tg/f3c78abb8d4b77e3",
            "arn_suffix": "targetgroup/private-lb-tg/f3c78abb8d4b77e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/private-lb-tg/f3c78abb8d4b77e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/pub-lb-tg/92d8fb47a2959695",
            "arn_suffix": "targetgroup/pub-lb-tg/92d8fb47a2959695",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:940734073892:targetgroup/pub-lb-tg/92d8fb47a2959695",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pub-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013c36e94a0780e53",
            "association_id": "eipassoc-0c5048380db82fb80",
            "connectivity_type": "public",
            "id": "nat-0e42b4e8afbcb4f48",
            "network_interface_id": "eni-01e7b5a4e5a2993ce",
            "private_ip": "10.0.0.5",
            "public_ip": "18.207.12.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b52888cfd14ef50",
            "tags": {
              "Name": "tasnim-NATGW"
            },
            "tags_all": {
              "Name": "tasnim-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:route-table/rtb-06bf305171bf43fb6",
            "id": "rtb-06bf305171bf43fb6",
            "owner_id": "940734073892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e42b4e8afbcb4f48",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tasnim-prv-rt"
            },
            "tags_all": {
              "Name": "tasnim-prv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:route-table/rtb-07b32be53514704fa",
            "id": "rtb-07b32be53514704fa",
            "owner_id": "940734073892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a264fa9d086cb147",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tasnim-pub-rt"
            },
            "tags_all": {
              "Name": "tasnim-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-prot1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de74bce17d2129db",
            "route_table_id": "rtb-06bf305171bf43fb6",
            "subnet_id": "subnet-0baebf988d44d9d6c"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.protected-sub1",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-prot2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbbc426f5dd80a7b",
            "route_table_id": "rtb-06bf305171bf43fb6",
            "subnet_id": "subnet-00e3bc648d9ce00bb"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.protected-sub2",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-prv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1be2d8935fe9de9",
            "route_table_id": "rtb-06bf305171bf43fb6",
            "subnet_id": "subnet-0d7aa8d2e7fe6d01b"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.private-sub1",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-prv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046f066a2f87f7045",
            "route_table_id": "rtb-06bf305171bf43fb6",
            "subnet_id": "subnet-03966d12a0fb0539e"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-rt",
            "aws_subnet.private-sub2",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182a61edb45de718",
            "route_table_id": "rtb-07b32be53514704fa",
            "subnet_id": "subnet-01b52888cfd14ef50"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-sub1",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a6a367edb4d35c",
            "route_table_id": "rtb-07b32be53514704fa",
            "subnet_id": "subnet-0b715e9159fd7b948"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-sub2",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:security-group/sg-07cfd18f4b0e81d4a",
            "description": "allow traffic from private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cfd18f4b0e81d4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bc0eee4fdf116c4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.32/28",
                  "10.0.0.48/28"
                ],
                "description": "Access for the public ALB SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-instance",
            "name_prefix": "",
            "owner_id": "940734073892",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.prv-instance",
            "aws_security_group.pub-instance",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:security-group/sg-04dde51aa041c581e",
            "description": "load balancer security group for app tier",
            "egress": [],
            "id": "sg-04dde51aa041c581e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2c9c89526de7560"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-sg-lb",
            "name_prefix": "",
            "owner_id": "940734073892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg-lb"
            },
            "tags_all": {
              "Name": "private-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-sg-lb",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prv-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:security-group/sg-00bc0eee4fdf116c4",
            "description": "alloww traffic from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bc0eee4fdf116c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0273643db2ed62b66"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0273643db2ed62b66"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0273643db2ed62b66"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prv-instance",
            "name_prefix": "",
            "owner_id": "940734073892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prv-instance"
            },
            "tags_all": {
              "Name": "prv-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pub-instance",
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:security-group/sg-0273643db2ed62b66",
            "description": "allow traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273643db2ed62b66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pub-instance",
            "name_prefix": "",
            "owner_id": "940734073892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-instance"
            },
            "tags_all": {
              "Name": "pub-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:security-group/sg-0e2c9c89526de7560",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2c9c89526de7560",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg-lb",
            "name_prefix": "",
            "owner_id": "940734073892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg-lb"
            },
            "tags_all": {
              "Name": "public-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-0d7aa8d2e7fe6d01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7aa8d2e7fe6d01b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-private1"
            },
            "tags_all": {
              "Name": "tasnim-private1"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-03966d12a0fb0539e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03966d12a0fb0539e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-private2"
            },
            "tags_all": {
              "Name": "tasnim-private2"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-0baebf988d44d9d6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baebf988d44d9d6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-protected1"
            },
            "tags_all": {
              "Name": "tasnim-protected1"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "protected-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-00e3bc648d9ce00bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3bc648d9ce00bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-protected2"
            },
            "tags_all": {
              "Name": "tasnim-protected2"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-01b52888cfd14ef50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b52888cfd14ef50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-public1"
            },
            "tags_all": {
              "Name": "tasnim-public1"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:subnet/subnet-0b715e9159fd7b948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b715e9159fd7b948",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940734073892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tasnim-public2"
            },
            "tags_all": {
              "Name": "tasnim-public2"
            },
            "vpc_id": "vpc-0ff31afd52409804d"
          },
          "dependencies": [
            "aws_vpc.tasnim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tasnim-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:940734073892:vpc/vpc-0ff31afd52409804d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e02259d2e2228e5",
            "default_route_table_id": "rtb-0d53e9b6975804cca",
            "default_security_group_id": "sg-08faae339b16783fd",
            "dhcp_options_id": "dopt-cdeed7b7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff31afd52409804d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d53e9b6975804cca",
            "owner_id": "940734073892",
            "tags": {
              "Name": "Tasnim VPC"
            },
            "tags_all": {
              "Name": "Tasnim VPC"
            }
          }
        }
      ]
    }
  ]
}